[FIX][REF] Alignment of Add to cart button

--- a/bista_website_sale_options/static/src/less/maq_website.ui.component.less
+++ b/bista_website_sale_options/static/src/less/maq_website.ui.component.less
@@ -166,7 +166,7 @@ h5{
     position: relative;
     /* padding-right: 0px; */
     padding:8px 12px;
-    top: -6px;
+    top: 0px;
     /*padding-bottom: 0px;*/
     color:#000;
     font-weight: bold;
